Fix alignment of the search box

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -78,12 +78,11 @@
 
 .l-search-box {
   position: relative;
-  max-width: 600px;
   margin: 0 auto;
   @include respond-to ($mq-l) {
+    @extend %clearfix;
     @include column(6);
     @include push(3);
-    @extend %clearfix;
   }
 }
 
